--- a/images/package.json
+++ b/images/package.json
@@ -5,7 +5,16 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "babel-runtime": "6.18.0",
     "meteor-node-stubs": "~0.2.0",
-    "babel-runtime": "6.18.0"
+    "react": "^15.4.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "eslint": "^3.12.2"
   }
 }
