--- a/url_shortner/package.json
+++ b/url_shortner/package.json
@@ -9,7 +9,8 @@
     "lodash": "^4.17.4",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
